UF-7125: Moved StakeholderRole enum to API-layer