@@ -154,6 +154,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.returnResult()
 			.getResponseBody();
 
+
 		// Create patch object
 		final PatchErrandDTO inputPatchErrandDTO = new PatchErrandDTO();
 		inputPatchErrandDTO.setDiaryNumber("A new patched diary number");
@@ -174,6 +175,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.expectBody(ErrandDTO.class)
 			.returnResult()
 			.getResponseBody();
+
 
 		// Update fields of the originally posted object, so we can compare with the patched object.
 		assertNotNull(resultPostErrandDTO);
@@ -199,10 +201,10 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -213,7 +215,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 
@@ -225,6 +227,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 				EXCLUDE_FIELDS)
 			.isEqualTo(result);
 	}
+
 
 	@Test
 	void testGetWithExtraParameter() {
@@ -238,11 +241,11 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				.queryParam("extraParameters[key 2]", "value 2")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					.queryParam("extraParameters[key 2]", "value 2")
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -275,12 +278,12 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				// One of the extra parameters is wrong
-				.queryParam("extraParameters[key 2]", "value 3")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					// One of the extra parameters is wrong
+					.queryParam("extraParameters[key 2]", "value 3")
+					.build())
 			.exchange()
 			.expectStatus().isNotFound();
 	}
@@ -296,12 +299,12 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				// Filter is wrong
-				.queryParam("filter", "externalCaseId:'%s'".formatted(RandomStringUtils.randomNumeric(10)))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					// Filter is wrong
+					.queryParam("filter", "externalCaseId:'%s'".formatted(RandomStringUtils.randomNumeric(10)))
+					.build())
 			.exchange()
 			.expectStatus().isNotFound();
 	}
@@ -317,14 +320,14 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
-				.queryParam("extraParameters[key 1]", "value 1")
-				.queryParam("page", "0")
-				.queryParam("size", "10")
-				.queryParam("sort", "id,desc")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
+					.queryParam("extraParameters[key 1]", "value 1")
+					.queryParam("page", "0")
+					.queryParam("size", "10")
+					.queryParam("sort", "id,desc")
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -353,7 +356,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		final String WORD_IN_THE_MIDDLE = "word-in-the-middle";
 
 		final ErrandDTO inputPostErrandDTO = createErrandDTO();
-		inputPostErrandDTO.getStakeholders().get(0).setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
+		inputPostErrandDTO.getStakeholders().getFirst().setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
 		postErrand(inputPostErrandDTO);
 
 		final ErrandDTO anotherErrandWithSameFirstName = createErrandDTO();
@@ -361,10 +364,10 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(anotherErrandWithSameFirstName);
 
 		final Page<ErrandDTO> resultPage = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "stakeholders.firstName ~ '*%s*'".formatted(WORD_IN_THE_MIDDLE))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "stakeholders.firstName ~ '*%s*'".formatted(WORD_IN_THE_MIDDLE))
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -393,10 +396,10 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 	@Test
 	void testGetWithOneQueryParam404() {
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(UUID.randomUUID()))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(UUID.randomUUID()))
+					.build())
 			.exchange()
 			.expectStatus().isNotFound()
 			.expectHeader().contentType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
@@ -416,24 +419,24 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO_1.getExternalCaseId()) +
-					"and " +
-					"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
-					"and " +
-					"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
-					"and " +
-					"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
-					"and " +
-					"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
-					"and " +
-					"applicationReceived:'%s'".formatted("{applicationReceived}") +
-					"and " +
-					"created:'%s'".formatted("{created}"))
-				.encode()
-				.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
-				.toUri())
+				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO_1.getExternalCaseId()) +
+						"and " +
+						"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
+						"and " +
+						"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
+						"and " +
+						"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
+						"and " +
+						"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
+						"and " +
+						"applicationReceived:'%s'".formatted("{applicationReceived}") +
+						"and " +
+						"created:'%s'".formatted("{created}"))
+					.encode()
+					.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
+					.toUri())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -470,25 +473,25 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.expectBody(ErrandDTO.class).returnResult().getResponseBody();
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", // Random UUID = no match, but uses operator "or" and should find an errand anyway.
-					"externalCaseId:'%s'".formatted(UUID.randomUUID()) +
-						"or " +
-						"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
-						"and " +
-						"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
-						"and " +
-						"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
-						"and " +
-						"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
-						"and " +
-						"applicationReceived:'%s'".formatted("{applicationReceived}") +
-						"and " +
-						"created:'%s'".formatted("{created}"))
-				.encode()
-				.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
-				.toUri())
+				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
+					.path("errands")
+					.queryParam("filter", // Random UUID = no match, but uses operator "or" and should find an errand anyway.
+						"externalCaseId:'%s'".formatted(UUID.randomUUID()) +
+							"or " +
+							"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
+							"and " +
+							"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
+							"and " +
+							"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
+							"and " +
+							"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
+							"and " +
+							"applicationReceived:'%s'".formatted("{applicationReceived}") +
+							"and " +
+							"created:'%s'".formatted("{created}"))
+					.encode()
+					.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
+					.toUri())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -514,7 +517,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		final ErrandDTO inputPostErrandDTO_1 = createErrandDTO();
 		postErrand(inputPostErrandDTO_1);
 
-		final StakeholderDTO person = inputPostErrandDTO_1.getStakeholders().stream().filter(stakeholderDTO -> StakeholderType.PERSON.equals(stakeholderDTO.getType())).findFirst().orElseThrow();
+		final StakeholderDTO person = inputPostErrandDTO_1.getStakeholders().stream().filter(stakeholderDTO -> stakeholderDTO.getType().equals(StakeholderType.PERSON)).findFirst().orElseThrow();
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
@@ -556,14 +559,6 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", "stakeholders.addresses.street:'%s'".formatted(person.getAddresses().get(0).getStreet()) +
-					"and " +
-					"stakeholders.addresses.houseNumber:'%s'".formatted(person.getAddresses().get(0).getHouseNumber()))
-				.encode()
-				.build()
-				.toUri())
 				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
 					.path("errands")
 					.queryParam("filter", "stakeholders.addresses.street:'%s'".formatted(person.getAddresses().getFirst().getStreet()) +
